unpackaged/main/default/objects/Service__c/fields/Added__c.field-meta.xml
<CustomField>
    <fullName>Added__c</fullName>
    <description>Date/Time record was created in Zoey platform</description>
    <label>Added</label>
    <type>DateTime</type>
</CustomField>