unpackaged/main/default/objects/Service__c/fields/AdditionalField1__c.field-meta.xml
<CustomField>
    <fullName>AdditionalField1__c</fullName>
    <description>Service additional field 1 - integrated with Zoey platform</description>
    <label>Additional Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>