unpackaged/main/default/objects/Service__c/fields/AdditionalField2__c.field-meta.xml
<CustomField>
    <fullName>AdditionalField2__c</fullName>
    <description>Service additional field 2 - integrated with Zoey platform</description>
    <label>Additional Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>