unpackaged/main/default/objects/Service__c/fields/AdditionalField3__c.field-meta.xml
<CustomField>
    <fullName>AdditionalField3__c</fullName>
    <description>Service additional field 3 - integrated with Zoey platform</description>
    <label>Additional Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>