unpackaged/main/default/objects/Service__c/fields/BillingPlatformLink__c.field-meta.xml
<CustomField>
    <fullName>BillingPlatformLink__c</fullName>
    <description>URL for the record on the billing platform</description>
    <formula>&#39;https://portal.codeinternational.com/admin/accounts/&#39; + Account__r.ZoeyAccountCode__c + &#39;/&#39; + ServiceCode__c</formula>
    <label>Billing Platform Link</label>
    <type>Text</type>
</CustomField>