unpackaged/main/default/objects/Service__c/fields/cli__c.field-meta.xml
<CustomField>
    <fullName>cli__c</fullName>
    <description>Service cli - integrated with Zoey platform</description>
    <label>CLI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>