unpackaged/main/default/objects/Service__c/fields/Contract_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_To__c</fullName>
    <description>Service contract date to - integrated with Zoey platform</description>
    <label>Contract Date To</label>
    <type>DateTime</type>
</CustomField>