unpackaged/main/default/objects/Service__c/fields/ContractDateFrom__c.field-meta.xml
<CustomField>
    <fullName>ContractDateFrom__c</fullName>
    <description>Service contract date from - integrated with Zoey platform</description>
    <label>Contract Date From</label>
    <type>DateTime</type>
</CustomField>