unpackaged/main/default/objects/Service__c/fields/CostCentre__c.field-meta.xml
<CustomField>
    <fullName>CostCentre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent cost centre record for the service</description>
    <label>Cost Centre</label>
    <referenceTo>CostCentre__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>