unpackaged/main/default/objects/Service__c/fields/CostCentreCode__c.field-meta.xml
<CustomField>
    <fullName>CostCentreCode__c</fullName>
    <description>Zoey Cost Centre Code</description>
    <label>Cost Centre Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>