unpackaged/main/default/objects/Service__c/fields/DateFrom__c.field-meta.xml
<CustomField>
    <fullName>DateFrom__c</fullName>
    <description>Service Date From - integrated with Zoey platform</description>
    <label>Date From</label>
    <type>DateTime</type>
</CustomField>