unpackaged/main/default/objects/Service__c/fields/DateTo__c.field-meta.xml
<CustomField>
    <fullName>DateTo__c</fullName>
    <description>Service Date To - integrated with Zoey platform</description>
    <label>Date To</label>
    <type>DateTime</type>
</CustomField>