unpackaged/main/default/objects/Service__c/fields/NetworkCode__c.field-meta.xml
<CustomField>
    <fullName>NetworkCode__c</fullName>
    <description>Network code associated with the service - integrated with Zoey platform</description>
    <label>Network Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>