unpackaged/main/default/objects/Service__c/fields/NetworkName__c.field-meta.xml
<CustomField>
    <fullName>NetworkName__c</fullName>
    <description>Network name associated with the service - integrated with Zoey platform</description>
    <label>Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>