unpackaged/main/default/objects/Service__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <description>Zoey Service Code</description>
    <externalId>true</externalId>
    <label>Service Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>