unpackaged/main/default/objects/Service__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Service name - sourced from Zoey</description>
    <label>Service Name (Zoey)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>