unpackaged/main/default/objects/Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Service status - integrated with Zoey platform</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>