unpackaged/main/default/objects/Service__c/fields/TariffCode__c.field-meta.xml
<CustomField>
    <fullName>TariffCode__c</fullName>
    <description>Tariff Code associated with the service - integrated with Zoey platform</description>
    <label>Tariff Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>