unpackaged/main/default/objects/Service__c/fields/TariffName__c.field-meta.xml
<CustomField>
    <fullName>TariffName__c</fullName>
    <description>Tariff Name associated with the service - integrated with Zoey platform</description>
    <label>Tariff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>