unpackaged/main/default/objects/Service__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Date/Time record was last updated in the Zoey platform</description>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>