unpackaged/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>cli__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>TariffName__c</columns>
    <columns>NetworkName__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>