unpackaged/main/default/objects/Service__c/listViews/All_Services_CLIs.listView-meta.xml
<ListView>
    <fullName>All_Services_CLIs</fullName>
    <columns>cli__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountCode__c</columns>
    <columns>CostCentre__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Services &amp; CLIs</label>
</ListView>